# cronus-eater

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  xablau.xlsx
.github/setup/: action.yaml
.github/workflows/: pipeline.yaml  test.yaml
cronus_eater/: __init__.py  __main__.py  _converter.py  _extractor.py  _extractor.pyi  _normalizer.py  _validator.py
docs/: README.md  index.md  mkdocs.yaml  setup.md  tests.md
docs/advance/: README.md
docs/docs/: index.md  tests.md
docs/docs/setup/: vscode.md
docs/setup/: README.md  pycharm.md  vscode.md
docs/setup/utils/: launch.json  settings.json
tests/: test_extractor.py  test_normalizer.py  test_validator.py
tests/data/: source.xlsx  source_0.xlsx  source_1.xlsx  source_norm_nubank_0.xlsx  target_0.csv  target_1.csv  target_2.csv  target_3.csv
tests/integration/: test_nubank.py
tests/integration/data/: pagseguro_3Q22.xlsx  target_0.xlsx  target_3.xlsx
tests/unit/: test_converter.py  test_extractor.py  test_normalizer.py  test_validator.py
tests/unit/data/: btg_3Q22.xlsx  nubank_3Q22.xlsx  target_1.xlsx  target_2.xlsx  target_norm_nubank_0.xlsx
