[tool.poetry]
name = "cronus-eater"
version = "0.1.0"
description = "A simple tool to get time series from spreadsheets"
authors = ["Breno Fernandes <brenojesusfernandes@pm.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.0"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
blue = "^0.9.1"
loguru = "^0.6.0"
isort = ">=5.10.1"
mypy = "0.991"
pyright = ">=1.1.286"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
