[tool.poetry]
name = "cronus-eater"
version = "0.1.0a10"
description = "A simple tool to get time series from spreadsheets"
authors = ["Breno Fernandes <breno.de.jesus.fernandes@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/breno-jesus-fernandes/cronus-eater"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{ "include" = "cronus_eater" }]
keywords = [
    "time series",
    "historical series",
    "chronological data sequence",
    "extract",
    "normalize",
    "spreadsheet",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/breno-jesus-fernandes/cronus-eater/issues"
"Documentation" = "https://cronus-eater.readthedocs.io/en/latest/?badge=latest"


[tool.poetry.dependencies]
python = ">=3.7.1,<3.12"
pandas = [
    { version = "1.3.5", python = ">=3.7.1,<3.8" },
    { version = "1.5.*", python = ">=3.8,<3.12" },
]
openpyxl = "3.0.*"
loguru = "0.6.*"
typing-extensions = "4.5.*"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.*"
blue = "0.9.*"
isort = "5.10.*"
mypy = { version = "0.991", python = ">=3.8,<3.12" }
pytest-cov = "4.0.*"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "9.0.*"
mkdocstrings = "0.19.*"
mkdocstrings-python = "0.8.*"
mkdocs-macros-plugin = "0.7.*"
mkdocs-exclude = "1.0.*"
jinja2 = "3.1.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 79
